--- a/src/pages/Animals/_animals.scss
+++ b/src/pages/Animals/_animals.scss
@@ -1,15 +1,12 @@
 .animals-container {
-  margin: 6.25rem auto;
-  width: fit-content;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 1rem;
+  // The style of this is on layouts
 
   .animal-card {
     grid-column: span 2;
     text-align: center;
-    border-radius: 1rem;
-    background-color: grey;
+    border-radius: 0.625rem;
+    background-color: #f3f3f3;
+    // border: 1px solid rgba(0, 0, 0, 0.212);
     overflow: hidden;
     width: 20rem;
     padding: 0.313rem 0.313rem 0.625rem 0.313rem;
@@ -27,7 +24,7 @@
       position: relative;
 
       .animal-image {
-        border-radius: 1rem 1rem 0 0;
+        border-radius: 0.625rem 0.625rem 0 0;
         width: 100%;
         height: 18.75rem;
         object-fit: cover;
@@ -54,6 +51,7 @@
     .animal-short-desc {
       margin: 0.625rem 0.313rem 1.25rem 0.313rem;
       flex: 1;
+      hyphens: auto;
     }
 
     .animal-button-options {
@@ -61,7 +59,6 @@
       display: flex;
       justify-content: space-around;
 
-      .animal-read-more,
       .animal-fed-status {
         width: 9.375rem;
         height: 2.5rem;
@@ -71,25 +68,24 @@
         border-radius: 0.625rem;
       }
 
-      .animal-read-more {
-        background-color: greenyellow;
-        padding: 0 1.25rem;
-        text-decoration: none;
-        color: black;
-      }
-
       .animal-fed-status {
-        background-color: greenyellow;
         padding: 0 0.625rem;
         user-select: none;
 
         .status-indicator {
           width: 0.938rem;
           height: 0.938rem;
-          background-color: green;
           display: inline-block;
           margin-right: 0.313rem;
           border-radius: 50%;
+        }
+
+        .status-full {
+          background-color: green;
+        }
+
+        .status-hungry {
+          background-color: red;
         }
       }
     }
