:art: Add import for scss files in index.scss

--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -1,2 +1,6 @@
-@import "./Layout/layout";
+@import "./Layouts/Website/layout";
 @import "./Animals/animals";
+@import "./Animal/animal";
+
+@import "./Layouts/Animals/animalsLayout";
+@import "./FedAnimals/fedAnimals";
