:art: Improve the structure of imports

--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -1,6 +1,8 @@
 @import "./Layouts/Website/layout";
-@import "./Animals/animals";
-@import "./Animal/animal";
 
+@import "./Home/home";
+@import "./Animal/animal";
 @import "./Layouts/Animals/animalsLayout";
+@import "./Animals/animals";
 @import "./FedAnimals/fedAnimals";
+@import "./AboutUs/aboutUs";
