:truck: Moved go-back button styles from _aboutUs.scss to _global.scss

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -28,3 +28,31 @@
     transform: none;
   }
 }
+
+// Used in About us / FAQ
+.go-back-btn {
+  position: relative;
+  left: -10px;
+  background-color: transparent;
+  appearance: none;
+  border: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+
+  &:hover {
+    text-decoration: underline;
+  }
+
+  .go-back-icon {
+    width: 20px;
+    height: 20px;
+    background-color: black;
+    margin-right: 10px;
+    mask-image: url("/icons/Arrow.svg");
+    mask-position: center center;
+    mask-repeat: no-repeat;
+    mask-size: cover;
+    transform: rotate(-180deg);
+  }
+}
