--- a/src/pages/Home/_home.scss
+++ b/src/pages/Home/_home.scss
@@ -34,12 +34,21 @@
 
 .scroll-boxes-section {
   height: fit-content;
-  // background-color: #003049;
   padding: 10vh 0;
 
+  .section-title,
   .scrollable-container {
     margin: 0 auto;
     width: 874px;
+  }
+
+  .section-title {
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-bottom: 20px;
+  }
+
+  .scrollable-container {
     height: 100%;
     position: relative;
 
@@ -49,21 +58,85 @@
       grid-template-columns: repeat(12, 5.95rem);
       gap: 1rem;
       overflow-x: scroll;
-      // background-color: blue;
+      scrollbar-width: none;
+      transform: skewX(5deg);
 
-      &::-webkit-scrollbar {
-        width: 8px;
-        height: 8px;
-      }
-
-      .animal-container {
+      .data-container {
         grid-column: span 2;
+        background-color: #f3f3f3;
         height: 300px;
-        background-color: red;
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center center;
+        overflow: hidden;
         border-radius: 1rem;
+        display: flex;
+        flex-direction: column;
+        text-decoration: none;
+        transform: scale(1);
+        transition: transform 0.3s ease-in-out;
+
+        &:hover {
+          transform: scale(0.98);
+          transition: transform 0.3s ease-in-out;
+        }
+
+        .data-image {
+          flex: 1;
+          width: 100%;
+          object-fit: cover;
+          object-position: center center;
+        }
+
+        .data-name {
+          flex: 0;
+          padding: 10% 0;
+          display: flex;
+          justify-content: center;
+          color: black;
+          font-size: 1.2rem;
+        }
+
+        .data-title {
+          flex: 0;
+          padding: 10% 5% 5% 5%;
+          color: #003049;
+          hyphens: auto;
+        }
+
+        .data-publish-date {
+          padding: 0 5% 10% 5%;
+          text-align: right;
+          color: black;
+        }
+
+        .see-more-container {
+          flex: 1;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 1.2rem;
+
+          &:hover {
+            .see-more-text {
+              text-decoration: underline;
+            }
+          }
+
+          .see-more-text {
+            display: flex;
+            align-items: center;
+            color: black;
+
+            .arrow-icon {
+              background-color: black;
+              width: 25px;
+              height: 25px;
+              display: inline-block;
+              mask-image: url("/icons/Arrow.svg");
+              mask-repeat: no-repeat;
+              mask-size: cover;
+              mask-position: center center;
+            }
+          }
+        }
       }
     }
 
