:sparkles: Add notFound page

--- a/src/pages/_index.scss
+++ b/src/pages/_index.scss
@@ -1,5 +1,7 @@
 @import "./Layouts/Website/layout";
 
+@import "./NotFound/notFound";
+
 @import "./Home/home";
 @import "./Animal/animal";
 @import "./Layouts/Animals/animalsLayout";
