--- a/src/pages/FAQ/_faq.scss
+++ b/src/pages/FAQ/_faq.scss
@@ -3,12 +3,7 @@
   width: 40vw;
 
   .page-title {
-    text-transform: uppercase;
-    font-weight: 600;
-    font-family: "Roboto", sans-serif;
-    letter-spacing: -0.05rem;
-    font-size: 2.5rem;
-    margin: 1.25rem 0 0 0;
+    // Style is on the global.scss file
   }
 
   .faq-image-container {
