--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -1,3 +1,4 @@
+// Button style
 .global-btn {
   background-color: #003049;
   padding: 0 1.25rem;
@@ -19,7 +20,6 @@
     transition: transform 0.3s ease-in-out;
   }
 }
-
 .global-btn-inactive {
   background-color: #444444;
   cursor: not-allowed;
@@ -55,4 +55,13 @@
     mask-size: cover;
     transform: rotate(-180deg);
   }
+}
+
+.page-title {
+  text-transform: uppercase;
+  font-weight: 600;
+  font-family: "Roboto", sans-serif;
+  letter-spacing: -0.05rem;
+  font-size: 2.5rem;
+  margin: 1.25rem 0 0 0;
 }
