:lipstick: Fix social media icons on contact us file

--- a/src/pages/ContactUs/_contactUs.scss
+++ b/src/pages/ContactUs/_contactUs.scss
@@ -121,7 +121,7 @@
           .youtube-icon {
             background-color: black;
             font-size: 0;
-            mask-size: cover;
+            mask-size: contain;
             mask-repeat: no-repeat;
             mask-position: center center;
             border: 0;
