--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,7 @@
 // Style folder
 @import "./style/reset";
 @import "./style/global";
+@import "./style/functions";
 // Pages folder
 @import "./pages/index";
 // Components
