--- a/src/pages/Animals/_animals.scss
+++ b/src/pages/Animals/_animals.scss
@@ -4,12 +4,12 @@
   .animal-card {
     grid-column: span 2;
     text-align: center;
-    border-radius: 0.625rem;
+    border-radius: toRem(10);
     background-color: #f3f3f3;
     // border: 1px solid rgba(0, 0, 0, 0.212);
     overflow: hidden;
-    width: 20rem;
-    padding: 0.313rem 0.313rem 0.625rem 0.313rem;
+    width: toRem(320);
+    padding: toRem(5) toRem(5) toRem(5.2) toRem(5);
     display: flex;
     flex-direction: column;
     transform: scale(1);
@@ -24,20 +24,20 @@
       position: relative;
 
       .animal-image {
-        border-radius: 0.625rem 0.625rem 0 0;
+        border-radius: toRem(10) toRem(10) 0 0;
         width: 100%;
-        height: 18.75rem;
+        height: toRem(300);
         object-fit: cover;
         object-position: center center;
       }
 
       .animal-name {
         font-weight: 700;
-        font-size: 1.875rem;
+        font-size: toRem(30);
         text-transform: uppercase;
         position: absolute;
         bottom: 0;
-        padding-left: 0.313rem;
+        padding-left: toRem(5);
         width: 100%;
         background: linear-gradient(
           0deg,
@@ -49,7 +49,7 @@
     }
 
     .animal-short-desc {
-      margin: 0.625rem 0.313rem 1.25rem 0.313rem;
+      margin: toRem(10) toRem(5) toRem(20) toRem(5);
       flex: 1;
       hyphens: auto;
     }
@@ -60,23 +60,23 @@
       justify-content: space-around;
 
       .animal-fed-status {
-        width: 9.375rem;
-        height: 2.5rem;
+        width: toRem(150);
+        height: toRem(40);
         display: flex;
         align-items: center;
         justify-content: center;
-        border-radius: 0.625rem;
+        border-radius: toRem(10);
       }
 
       .animal-fed-status {
-        padding: 0 0.625rem;
+        padding: 0 toRem(10);
         user-select: none;
 
         .status-indicator {
-          width: 0.938rem;
-          height: 0.938rem;
+          width: toRem(15);
+          height: toRem(15);
           display: inline-block;
-          margin-right: 0.313rem;
+          margin-right: toRem(5);
           border-radius: 50%;
         }
 
