--- a/src/pages/FAQ/_faq.scss
+++ b/src/pages/FAQ/_faq.scss
@@ -1,5 +1,5 @@
 .faq-section {
-  margin: 3.25rem auto 6.25rem auto;
+  margin: toRem(52) auto toRem(100) auto;
   width: 40vw;
 
   .page-title {
@@ -7,24 +7,24 @@
   }
 
   .faq-image-container {
-    margin: 1.875rem 0;
-    border-radius: 1rem;
+    margin: toRem(30) 0;
+    border-radius: toRem(16);
     overflow: hidden;
     background-color: #f3f3f3;
 
     .faq-image {
       margin: 0 auto;
-      max-height: 35.625rem;
+      max-height: toRem(570);
     }
   }
 
   .faq-container {
-    margin-bottom: 30px;
+    margin-bottom: toRem(30);
 
     .question-container {
       background-color: #eeeeee;
-      border-top: 5px solid #003049;
-      padding: 10px;
+      border-top: toRem(5) solid #003049;
+      padding: toRem(10);
       display: flex;
       justify-content: space-between;
 
@@ -33,8 +33,8 @@
       }
 
       .question-expand-arrow {
-        width: 30px;
-        height: 30px;
+        width: toRem(30);
+        height: toRem(30);
         background-color: black;
         mask-image: url("/icons/Arrow.svg");
         mask-position: center center;
@@ -53,12 +53,12 @@
     .answer-container {
       background-color: #f3f3f3;
       font-weight: 400;
-      padding: 0 10px;
+      padding: 0 toRem(10);
       height: 0;
       overflow: hidden;
     }
     .answer-container-expand {
-      padding: 10px 10px;
+      padding: toRem(10) toRem(10);
       height: fit-content;
     }
   }
