:pencil2: Correct margin toRem value

--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -63,5 +63,5 @@
   font-family: "Roboto", sans-serif;
   letter-spacing: toRem(-0.8);
   font-size: toRem(40);
-  margin: toRem(1, 25) 0 0 0;
+  margin: toRem(1.25) 0 0 0;
 }
